fix: SonarCube 이슈 수정 #64